--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ h1{
     not hype or unrealistic promises.
   </div>
 
-  <a href="https://t.me/yourtelegramlink" target="_blank" class="cta">
+  <a href="https://t.me/+RembN8QvT8QyY2M1" target="_blank" class="cta">
     Join Free Telegram Channel
   </a>
 
