--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ src="https://www.facebook.com/tr?id=25905653712401231&ev=PageView&noscript=1"/>
     not hype or unrealistic promises.
   </div>
 
-  <a href="https://t.me/+LslHcLZ9rJtmNmU1" target="_blank" class="cta">
+  <a href="https://t.me/+IT275n7H6ZI0OWZl" target="_blank" class="cta">
     Join Free Telegram Channel
   </a>
 </div>
